# FTHI

./: .gitignore  .gitmodules  FTHI.sln  Important Development Information.docx  LICENSE  README.md
Com/DR_WAV/: dr_wav.h
Com/GLAD/glad/: glad.h
Core/: Core.aps  Core.vcxproj  Core.vcxproj.filters  NULL  open-in-msvs.vbs
Core/Debug/: vc143.idb
Core/Debug/Core.tlog/: Core.lastbuildstate
Core/EngineLibs/Code/: CMakeLists.txt  CompileLib.bat
Core/EngineLibs/Header/: DLLHeader.h
Core/EngineLibs/ProjectBuilder/: ProjectBuilder.bat
Core/EngineLibs/ProjectBuilder/Release/: ProjectBuilder.bat
Core/EngineLibs/ProjectCompiler/: ProjectCompiler.bat
Core/EngineLibs/ProjectCompiler/Release/: ProjectCompiler.bat
Core/Source/Class/Object/: Object.cpp  Object.h
Core/Source/Includes/: Constants.h  ExternalLibs.h  ExternalLibsDll.h  Globals.cpp  Globals.h  Macros.h
Core/Source/Source/Algorithms/: Algorithms.h  Core_Functions.h  Math_Functions.h  Overloads.h  Standard_Functions.h
Core/Source/Source/Collisions/: Collisions.h  Mask_Collisions.h
Core/Source/Source/Events/: EventListeners.cpp  EventListeners.h
Core/Source/Source/Loaders/: Audio.cpp  Audio.h  Fonts.cpp  Fonts.h  Load_Image.h  Textures.cpp  Textures.h
Core/Source/Source/Loops/: Editor_Loop.h  Loop.cpp  Loop.h  Story_Loop.h
Core/Source/Source/Main/: Source.cpp
Core/Source/Source/Rendering/: EditorFunctions.cpp  Exit.cpp  (+8 more)
Core/x64/Debug/: Core.exe.recipe
DebugVS/: DebugVS.csproj  Program.cs  packages.config
DebugVS/Properties/: AssemblyInfo.cs
Dependencies/GLAD/: GLAD.vcxproj.filters  glad.c
DisplaySplash/: DisplaySplash.cpp  DisplaySplash.vcxproj  DisplaySplash.vcxproj.filters  DisplaySplashrc.aps  DisplaySplashrc.rc  resource.h
Lib/AL/: OpenAL32.exp  common.lib  ex-common.lib
Lib/FREETYPE/: freetyped.lib
Lib/GLAD/: glad.c
Lib/OPENVS/: OpenVisualStudio.deps.json
Lib/SOIL/: soil2.lib
Modules/DRLIB/: DRLIB.vcxproj
Modules/FREETYPE/: FREETYPE.vcxproj
Modules/GLAD/: GLAD.vcxproj  glad.h
Modules/GLFW/: GLFW.vcxproj
Modules/GLM/: GLM.vcxproj
Modules/OPENAL/: OPENAL.vcxproj
Modules/SOIL2/: SOIL2.vcxproj
NetFrameworkWrangler/: NetFrameworkWrangler.cpp  NetFrameworkWrangler.vcxproj  NetFrameworkWrangler.vcxproj.filters
Resources/Config/: Editing.cfg
Resources/Materials/: Friction_Temp.txt  Lighting.txt  Lighting_Temp.txt
Resources/Models/Soft Bodies/: File1  NULL
Resources/ProjectCodeTemplates/: ArraySizes.h  CMakeLists.txt  Constants.h  GlobalScriptHeader.h  Globals.h  Main.cpp  ScriptHandler.cpp
(+284 files in other folders)
